# First_MLOPS_Pipeline

./: .env  .example.env  .gitignore  LICENCE  README.md  Runner.ipynb  pyproject.toml
docs/: Clearml_Setup.md  LocalExecution.md  RemoteExecution.md
first_mlops_pipeline/: __main__.py  data_pipeline.py  evaluate_model.py  pipeline.py  preprocess_upload_cifar10.py  preprocess_uploaded_images.py  train_model.py  update_model.py  upload_cifar_raw.py  upload_image_dataset.py
notebooks/: ClearML_Agent_AWS_or_Google_Colab_Notebooks.ipynb
notebooks/Archive/: Setup for Colab to Execute locally.ipynb
