[tool.poetry]
name = "first-mlops-pipeline"
version = "0.1.0"
description = "MLOPS Pipeline using ClearML"
authors = ["Gitarth Vaishnav <Gitarth.Vaishnav@uts.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
clearml = "^1.14.2"
tensorflow = "2.13.0"
numpy = ">=1.22,<=1.24.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
scikit-learn = "^1.4.0"
gitpython = "^3.1.42"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
